Make select-menu-router have a higher zindex to avoid overlap (#578)

--- a/app/components/react-select.global.css
+++ b/app/components/react-select.global.css
@@ -247,7 +247,7 @@
   position: absolute;
   top: 100%;
   width: 100%;
-  z-index: 1;
+  z-index: 101;
   -webkit-overflow-scrolling: touch;
 }
 .Select-menu {
